Pull template bootstrap.json out to its own file